--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -114,12 +114,7 @@
 		  <p class="justified text-aria"> As the lead user researcher, I successfully helped build a prototype using the insights and data I collected from generative research conducted. </p>
           
 			<h3 class="header-aria">Impact</h2>
-		  	<p class="justified text-aria tabspacing">This low cost device consists of a variety of sensors to offer a wider detection range. The output works on haptics and can be used by Deaf and Hard of hearing people as well. The users do not have to spend money on devices that are expensive and bear only one sensor as this prototype is a handy alternative.  We anticipate that people in Low-and Middle income countries would be able to afford the device should it hit the market. </p>
-			<p class="text-aria tabspacing"> This device can be used for regular walking as well, extending from the runners. </p>
-			<p class="text-aria tabspacing"> <b>Almost all</b> of the users who tried this prototype mentioned that they would like to use it for their day to day activities. </p>
-			<p class="text-aria tabspacing"> <b>All</b> users liked the idea of a non-intrusive belt that can be used to detect obstacles. </p>
-			<p class="text-aria tabspacing"> <b>Majority</b> of the users feel that the belt is lightweight and can be used as an alternative to the devices currently available. </p>
-			</span>
+		  	<p class="justified text-aria ">This low cost device consists of a variety of sensors to offer a wider detection range. The output works on haptics and can be used by Deaf and Hard of hearing people as well. The users do not have to spend money on devices that are expensive and bear only one sensor as this prototype is a handy alternative.  We anticipate that people in Low-and Middle income countries would be able to afford the device should it hit the market. This device can be used for regular walking as well, extending from the runners. <b>Almost all</b> of the users who tried this prototype mentioned that they would like to use it for their day to day activities. <b>All</b> users liked the idea of a non-intrusive belt that can be used to detect obstacles. <b>Majority</b> of the users feel that the belt is lightweight and can be used as an alternative to the devices currently available.
           </div>
 		</div>
         </div>
@@ -280,9 +275,9 @@
 	
 	<section id="insights2">
       <div class="container" data-aos="fade-up">
-          <h2 class="uppermargin2">INSIGHTS</h2>
+          <h2>Insights</h2>
 			<ul class="listitems">
-				<li class="text-aria">Multiple obstacle detection:  Participants want an array of obstacles to be detected and not just a single obstacle.</li>
+				<b><li class="text-aria">Multiple obstacle detection:  Participants want an array of obstacles to be detected and not just a single obstacle.</li>
 				<li class="text-aria">A non-intrusive device that is multimodal: Participants do not want a device that impedes them in any way either physically or mentally in any way while running</li>
 				<li class="text-aria">Presentation of multiple haptic feedback: Participants are looking at receiving an array of feedback in the form of haptics while approaching an obstacle.
 </li>
@@ -291,7 +286,7 @@
 				<li class="text-aria">Weight Constraints: Participants do not want to carry something heavy while running as it impedes their run.
 </li>
 				<li class="text-aria">Terrain: Participants want the device to work in multiple terrains, and not just track and field.
-</li>
+</li></b>
 			</ul>
 	  </div>
     </section>
