--- a/mobileapp.html
+++ b/mobileapp.html
@@ -116,7 +116,7 @@
 
         <div class="section-title">
       <div class="container" data-aos="fade-up">
-	<h2 class="portfolio-title uppermargin">The project</h2>
+	<h2 class="portfolio-title">The project</h2>
 		  
 		  <p class="justified">
             <span class = "text-aria"> This is an individual project driven by my motivation to help individuals who are blind. As a part of my thesis, I am investigating the navigational habits of individuals who are blind. From the semi-structured interviews, I decided to use that data, along with other user research techniques to come up with an application that may encapsulates things that users would like to see in a navigational application. Currently the functionalities are spread out across applications which leads me to wonder, can I make an application prototype that puts all the navigation functionalities in one application?. </span> </p>
