--- a/coeit-research.html
+++ b/coeit-research.html
@@ -133,9 +133,9 @@
           <h2 class="header-aria"><b>Initial usability concerns</b></h2> 
 		  <p class="justified ">
             <p><ul class="text-aria"> <li> Inconsistent content </li>
-			<li>limited to no user engagement </li>
+			<li>Limited to no user engagement </li>
 			<li> Verbose Content </li>   
-			<li> no clear pathways for research content </li>
+			<li> No clear pathways for research content </li>
 			<li> The site not designed for an assorment of users. </li>
 			</ul>
 		</p>
