--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -90,16 +90,16 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p class="justified"><ul>
-              <li><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
-              <li><strong>User Base</strong>: Students, Faculty, General Audience who want information related to anything the Shared Services Center has to offer.</li>
-              <li><strong>Project Timeline</strong>: September 2020 - Present </li>
-              <li><strong>Team Members</strong>: Finance Specialists, Business Associates </a></li>
-			  <li><strong>My Role</strong>: User Researcher and Web developer</a></li>
+              <li class="text-aria"><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
+              <li class="text-aria"><strong>User Base</strong>: Students, Faculty, General Audience who want information related to anything the Shared Services Center has to offer.</li>
+              <li class="text-aria"><strong>Project Timeline</strong>: September 2020 - Present </li>
+              <li class="text-aria"><strong>Team Members</strong>: Finance Specialists, Business Associates </a></li>
+			  <li class="text-aria"><strong>My Role</strong>: User Researcher and Web developer</a></li>
             </ul>
 			
 			</p>
 			<h3> About the Project</h3>
-            <p class="justified">
+            <p class="justified text-aria">
                 The Shared Services Center website suffered from decreased audience because of usability and content structure related issues. Through user research, our aim to change the existing structure of the website to improve the number of people visiting the website and hence, improve some of the parameters like the amount of time spent by the user on the website, time on each task, efficiency of information retrieval, etc,. In addition, another goal of ours is to provide good content, in an attempt to reduce the current bounce rates.
             </p>
 		</div>
