--- a/coeit-research.html
+++ b/coeit-research.html
@@ -129,7 +129,7 @@
           </div>
 	</div>
 	
-      <div class="container uppermargin" data-aos="fade-up">
+      <div class="container" data-aos="fade-up">
           <h2 class="header-aria"><b>Initial usability concerns</b></h2> 
 		  <p class="justified ">
             <p><ul class="text-aria"> <li> Inconsistent content </li>
