--- a/mobileapp.html
+++ b/mobileapp.html
@@ -104,7 +104,7 @@
           
 		  <h3>My Role</h3>
 		  <p class="justified text-aria"> UX researcher and UX designer</p>
-		 .</div>
+		 </div>
 			  </div>
 			  <div class="container content">
 		  
