--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -61,7 +61,7 @@
         </div>
       </li>
 	   <li class="nav-item active">
-        <a class="nav-link" href="index.html#resume"><span class="whitecolor">Resume</span></a>
+        <a class="nav-link nav-link1" "assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">Resume</span></a>
       </li>
     </ul>
   </div>
