--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -55,13 +55,13 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html"><span class="navcolor">Home</span> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#about"><span class="whitecolor">About</span></a>
+        <a class="nav-link" href="index.html#about"><span class="navcolor">About</span></a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
+        <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="navcolor">
           Projects</span>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -71,7 +71,7 @@
         </div>
       </li>
 	   <li class="nav-item active">
-        <a class="nav-link" href="index.html#resume"><span class="whitecolor">Resume</span></a>
+        <a class="nav-link nav-link1" href="index.html#resume"><span class="navcolor">Resume</span></a>
       </li>
     </ul>
   </div>
