--- a/coeit-research.html
+++ b/coeit-research.html
@@ -70,7 +70,7 @@
 
 	<section id="hero-page3" class="d-flex flex-column justify-content-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>University of Maryland, Baltimore County - College of Engineering and Information Technology's Research Website Redesign</h1>
+      <h1>College of Engineering and Information Technology's Research Website Redesign</h1>
        </div>
 
       </div>
