--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1><b>Hi! 🙏 I am Anirudh Nagraj</b></h1>
       <p><b>I'm a User Researcher who helps build better products, bringing customers and businesses closer to one another.</b></p>
+		 <div class ="center">
+		 <a href ="index.html#portfolio"> <button class="custom-btn btn-1">View Projects </a></button>
+		 </div>
   </section><!-- End Hero -->
 
   <main id="main">
