--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -58,7 +58,7 @@
         <a class="nav-link" href="index.html"><span class="navcolor">Home</span> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#about"><span class="navcolor">About</span></a>
+        <a class="nav-link" href="about.html"><span class="navcolor">About</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="navcolor">
