--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1><b>Hi! 🙏 I am Anirudh Nagraj</b></h1>
       <p><b>I'm a User Researcher who helps build better products, bringing customers and businesses closer to one another.</b></p>
-		 <div class ="center">
-		  
 		 <button class="custom-btn btn-1" onclick="window.location.href='index.html#portfolio'" > View Projects </a></button>
 		 </div>
   </section><!-- End Hero -->
@@ -143,8 +141,19 @@
             </div>
           </div>
 		
+		  <div class="col-lg-4 col-md-6 portfolio-item filter-app filter-card">
+            <div class="icon-box iconbox-teal"><a href="thesis.html">
+              <div class="icon">
+                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64.34 55.97"><defs><style>.cls-1{fill:#f3f4f4;}</style></defs><path class="cls-1" d="M241.36,45.45c4.55-11.35,21.08-16.05,31.8-16.19,4-.05,14.26-.18,17.92,5.78.84,1.37,1.33,4.38,2.31,10.41.95,5.83.8,7.84.58,9.24a20.7,20.7,0,0,1-2.89,7.52c-8.17,13.92-7.33,16.23-10.41,19.07-12.87,11.87-51.8-6.08-50.87-14.45.24-2.14,2.92-2.22,6.36-6.93C240.32,54.2,239.5,50.1,241.36,45.45Z" transform="translate(-229.79 -29.25)"/></svg>
+                <i class='bx bxs-book-content'></i>
+              </div>
+              <h4 class="hover">Master's Thesis</a></h4>
+              <p>Investigating the navigational habits of individuals who are blind in India.</p>
+            </div>
+          </div>
 		</div>
 
+		
         </div>
         <!-- <div class="row portfolio-container">
 				
