--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -91,7 +91,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p class="justified"><ul>
               <li class="text-aria"><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
-              <li class="text-aria"><strong>User Base</strong>: Students, Faculty, General Audience who want information related to anything the Shared Services Center has to offer.</li>
+              <li class="text-aria"><strong>User Base</strong>: Internal Team members, students, and faculty requiring information related to the shared services center. </li>
               <li class="text-aria"><strong>Project Timeline</strong>: September 2020 - Present </li>
               <li class="text-aria"><strong>Team Members</strong>: Finance Specialists, Business Associates </a></li>
 			  <li class="text-aria"><strong>My Role</strong>: User Researcher and Web developer</a></li>
@@ -108,10 +108,10 @@
 		</br>
 		  <h3>My Role</h3>
 		  <p class="justified text-aria"> User researcher and web developer responsible for carrying out the research and implementing the findings from the data through front-end web technologies to yield positive results.  </p>
-		  <h3>Goals</h3>
-            <p class="justified text-aria">
-				Through the insights derived from the qualitative study (Observations, 1-1 interviews), I am working towards reducing the bounce rate, increasing the number of users visiting the website, and help improve the overall retention rate. 
-			  </div>
+		  
+		  <h3 class="header-aria"><b>Impact</b></h2>
+		  <p class="justified">
+			<span class = "text-aria"> Through observations and incorporating quantitative data, the team managed to improve the <b> NPS from 30 - 50 </b>. Increase the number of users over a period of 6 months to an all time high of <b>147 users </b> on a single day. In addition to that, the page views have been consistent and the <b> bounce rates currently stand at a low of 27%. </b>  Due to the changes implemeted post user research, the numbers show that the average number of page views was higher than what was before the redesign, with an <b>all time high of 184 page views </b>after the redesign. </span>
         </div>  
 	  </div>
     </section>
