--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -98,7 +98,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/Personal/prototype2.jpg" class="avatar4" alt="">
+            <img src="assets/img/Personal/Prototype.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p class="justified"><ul>
