--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -124,7 +124,10 @@
 		  
 		  <p class="justified">
             <span class = "text-aria"> The team at the Shared Services Center  is looking to restructure the website to help guide users better, and help provide the required information with ease.</span> </p>
+			<p class="justified">
+            <span class = "text-aria"> Our client, the College of Engineering and Information technology (COEIT) highlighted some problems in their research website. The issues stem from the decreased usability and decreased user reach in the website. Our team decided to employ user research and help improve the usability of the website focussing on the base requirements of increased usability and improved traffic on the website.</span> </p> 
 			
+          </div>
           </div>
 		</div>
     </section>
