--- a/mobileapp.html
+++ b/mobileapp.html
@@ -242,11 +242,12 @@
 		</div>
 		
 	  </section>
+	  
 		<section id="insights2">
 		<div class="container" data-aos="fade-up">
           <h2 class="uppermargin2"><b>Insights</b></h2>
-			<span class="text-aria tabspacing">
-				<p class="text-aria tabspacing"><b>Information: </b> Participants want information to be presented to them directly via the application or require fellow human to tell them navigational directions.</p>
+			<span class="text-aria">
+				<p class="tabspacing"><b>Information: </b> Participants want information to be presented to them directly via the application or require fellow human to tell them navigational directions.</p>
 				<p class="tabspacing"><b>Functions: </b> Participants look for functions to be ‘visible’ – easily identifiable.</li>
 				<p class="tabspacing"><b>Specific Information: </b> Look out for information like Bus Route Information, Bus Stop names, nearby accessible stops, etc.,</p>
 				<p class="tabspacing"><b>Click Rate: </b> Participants mentioned that they preferred minimum clicks and maximum utility for each section of the application.</p>
