--- a/coeit-research.html
+++ b/coeit-research.html
@@ -311,7 +311,7 @@
 	<section>
 	<div class="container" data-aos="fade-up">
           <div>
-          <h2 class="uppermargin"><b>Design from the RESEARCH Conducted.  <button type="button" id="expandbutton" class="btn btn-info" data-toggle="collapse" data-target="#design">+ </b> </h2></button>
+          <h2 class="uppermargin"><b>Design from the RESEARCH Conducted.</b>  <button type="button" id="expandbutton" class="btn btn-info" data-toggle="collapse" data-target="#design">+ </h2></button>
           </div>
 		  <div id="design" class="collapse">
 		  <p class="justified">
