--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1><b>Hi! 🙏 I am Anirudh Nagraj</b></h1>
+      <h1><b>Hi! 👋🏽 I am Anirudh Nagraj</b></h1>
       <p><b>I'm a User Researcher who helps build better products, bringing customers and businesses closer to one another.</b></p>
-		 <button class="custom-btn btn-1" onclick="window.location.href='index.html#portfolio'" > View Projects </a></button>
+		 <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='index.html#portfolio'" > View Projects </a></button> </div>
 		 </div>
   </section><!-- End Hero -->
 
   <main id="main">
 
 	 <section id="portfolio" class="portfolio section-bg">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
 	  
 	  <div class="section-title">
