--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -158,7 +158,7 @@
 	
 			<p class="tabspacing"><b>Ethnicity: </b> Any</p>
 
-			<p class="tabspacing"><b>Devices:</b> Mobile (Android and IOS) and others (BuzzClip, SUNU Band, etc.,) </p></span>
+			<p class="tabspacing"><b>Devices:</b> Mobile (Android and IOS) and others (BuzzClip, SUNU Band, WeWalk Smart Cane, etc.,) </p></span>
           </div>
 		  </div>
 	</section>
@@ -253,14 +253,8 @@
 			<figcaption align="center"> <i>A sample scenario </i></figcaption>
 		  </figure>
 		  <h4 class="uppermargin"><b>Affinity Diagramming</b></h4>
-			<span class = "text-aria"> Once we had all the data points ready, the team sat down and created an affinity diagram to draw themes and prioritize them. Collaboration was done on a tool called <span class ="irqhighlight"><b>MIRO</b> </span>. We did the affinity mapping exercise to populate the themes and note what was important to the development of the prototype. </span></p>
-          <h2 class="header-aria">Some Insights</h2>
-			<ul class="listitems">
-				<li class="text-aria">Helped us organize the ideas about the possible solution for the users. </li>
-				<li class="text-aria"> Observe the ideas in our study about the possible prototype.</li>
-				<li class="text-aria">Gave an insight on the way other researchers thought about the device and the solution as a whole</li>
-				<li class="text-aria">Although time consuming, we gained valuable insights on what to prioritize going forward.</li>
-			</ul>
+			<p class ="justified"><span class = "text-aria"> We created the affinity diagram exercise to populate the themes, arrange thoughts from brainstorming into clusters and note what was important to the development of the prototype. Once we had all the data points ready, the team sat down and created an affinity diagram to draw themes and prioritize them. Collaboration was done on an online tool called <span class ="irqhighlight"><b>MIRO</b> </span>. Affinity Diagram also helped us organize the ideas about the possible solution for the users and allowed the team to observe the ideas in our study about the prototype to be built. It gave an insight on the way each researcher in the tem thought about the device, solution, and the environment as a whole. Although time consuming, we gained valuable insights on what to prioritize going forward. This method was chosen because several people combined their research before the development of the prototype.  We did the affinity mapping exercise to populate the themes and note what was important to the development of the prototype. </span></p>
+          
 		  <figure>
 		  <img src="assets/img/Personal/Affinity Diagram.png" class="img-fluid" alt="">
 		  <figcaption align="center"> <i>Affinity Diagram </i></figcaption>
@@ -323,7 +317,7 @@
 		  <p class="justified text-aria">As a team, we want to develop a suitable device to fit our target audience. So we interviewed participants ranging from first-time runners to seasoned marathon runners about the prospective device as a concept interview based on the research. The feedback was collected, analyzed, coded for reference. We conducted the context interviews to inform the device's feature decisions based on the users' feedback.</p> 
 		  <blockquote> <i>It depends on how well you know the trail. I’ve gotten to the point where they just. Give me a really short warning. I’ll be OK because I’m prepping for it anyways. If that makes sense.</i></blockquote>
 		  <blockquote> <i>The DeafBlind cannot hear the bells as a location indicator. Again the SUNU band already does this and it was tested in a crowded race type environment</i></blockquote>
-		   <h2 class="header-aria">INSIGHTS</h2>
+		   <h2 class="header-aria">Some Insights</h2>
 			<ul class="listitems">
 				<li class="text-aria">The participants mentioned that if the weight is negligible while running, it would be ideal for them to dorn the device.  </li>
 				<li class="text-aria"> A single sensor would not cut it in environments where wide sensing would be required.</li>
@@ -344,7 +338,7 @@
 	<h4><b>Obstacle course evaluation </b></h4>
 			<p class ="justified"><span class = "text-aria">We will be running an evaluation study with an obstacle course to draw further insights for future iterations. You can find the evaluation document <a href ="#">here </a>. </span> </p>
 			<h4 class="uppermargin"><b>A/B Testing</b></h4>
-			<p class ="justified"><span class = "text-aria">A/B Testing to be done on the different editions of the prototype. </span> </p>
+			<p class ="justified"><span class = "text-aria">Multivariate Testing to be done on the different editions of the prototype. </span> </p>
 			</div>
 			</div>
 	</section>
