--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -341,11 +341,10 @@
 			
 			<section>
 			<div class="container" data-aos="fade-up">
-			<h2 class ="header-aria">NEXT STEPS <h2>
+			<h2 class ="header-aria"> Evaluation <h2>
 			<h4><b>Obstacle course evaluation </b></h4>
-					<p class ="justified"><span class = "text-aria">We will be running an evaluation study with an obstacle course to draw further insights for future iterations. You can find the evaluation document <a href ="#">here </a>. </span> </p>
-					<h4 class="uppermargin"><b>A/B Testing</b></h4>
-					<p class ="justified"><span class = "text-aria">Multivariate Testing to be done on the different editions of the prototype. </span> </p>
+					<p class ="justified"><span class = "text-aria">We ran an evaluation study with an obstacle course to draw further insights for future iterations. You can find the evaluation document <a href ="#">here </a>. </span> </p>
+					
 					</div>
 					</div>
 			</section>
