--- a/coeit-research.html
+++ b/coeit-research.html
@@ -98,7 +98,7 @@
               <li class="text-aria"><strong>User Base</strong>: Students, Faculty, Researchers.</li>
               <li class="text-aria"><strong>Project Timeline</strong>: January 2020 - May 2020</li>
               <li class="text-aria"><strong>Team Members</strong>: 2 student team - Hirak Ray and Anirudh Nagraj</li>
-              <li class="text-aria"><strong> Research Methods</strong>:  <b>Contextual Inquiries, One on One interviews, Heuristic Evaluations, Participatory Design, Competitive Analysis, Task Analysis, Personas.</b></li>
+              <li class="text-aria"><strong> Research Methods</strong>:  Contextual Inquiries, One on One interviews, Heuristic Evaluations, Participatory Design, Competitive Analysis, Personas.</li>
             </ul> </p>
             <h3>My Role</h3>
             <p class="justified text-aria"> User researcher responsible for conducting qualitative studies and help improve the usability of the existing product by providing recommendations.  </p>
@@ -118,38 +118,34 @@
     <section id="project" class="about">
 
       <div class="section-title">
-        <div class="container" data-aos="fade-up">
-          <h2 class="portfolio-title ">The project</h2>
+        <div class="container">
+          <h2 class="portfolio-title">The project</h2>
         </div>
         </div>
 
-        <div class="container" data-aos="fade-up">
-          <h2 class="header-aria"><b>Initial usability concerns</b></h2>
-          <p class="justified ">
-            <span><ul class="text-aria">
-              <li> Inconsistent content </li>
-              <li>Limited to no user engagement </li>
-              <li> Verbose Content </li>
-              <li> No clear pathways for research content </li>
-              <li> The site not designed for an assorment of users. </li>
-            </ul>
-          </span>
-        </p>
-        </div>
 
-        <div class="container uppermargin" data-aos="fade-up">
-          <h2 class="header-aria"><b>Basic Questions</b></h2>
+        <div class="container">
+          <h3><b>Basic Questions</b></h3>
             <h5 class = "userbasecolor"><b>Who are the users? </b></h5>
             <p class="justified"> <span class = "text-aria"> The COEIT research website is a source of information regarding research in UMBC. It is used by students aged 18-35, as well as professors (Age 30-70). External researchers may also use the website to learn more about research being conducted at UMBC. </span> </p>
             <h5 class = "userbasecolor"><b>What problem are we solving? </b></h5>
-            <p class="justified"> <span class = "text-aria"> The COEIT research website has a lot of usability issues. We are trying to improve the usability and enable more people visit the website. </span> </p>
+            <p class="justified"> <span class = "text-aria"> The COEIT research website has a lot of usability issues. We are trying to redesign the website to address the initial usability issues mentioned below.
+              <p class="justified ">
+                <span><ul class="text-aria">
+                  <li> Inconsistent content </li>
+                  <li>Limited to no user engagement </li>
+                  <li> Verbose Content </li>
+                  <li> No clear pathways for research content </li>
+                  <li> The site not designed for an assorment of users. </li>
+                </ul>
+              </span> </span> </p>
             <h5 class = "userbasecolor"><b>How are we solving the problem? </b></h5>
             <p class="justified"> <span class = "text-aria"> As we were two people solving the issue, we needed a process and a set of research methods to help steer the redesign. </span> </p>
           </div>
 
-          <div class="container uppermargin" data-aos="fade-up">
+          <div class="container uppermargin">
             <div>
-              <h2 class="header-aria">Recruitment</h2>
+              <h3> <b>Recruitment </b></h3>
               <p class="text-aria">We recruited participants using the <span class="irqhighlight"> snowball sampling technique avoid any sort of bias. </span> </p>
               <span class="text-aria">
 
@@ -167,13 +163,13 @@
         </section>
 
         <section>
-                <div class="container" data-aos="fade-up">
+                <div class="container section-title" data-aos="fade-up">
                   <div>
-                    <h1 align="center"><b>RESEARCH</b></h1>
+                    <h2 class="portfolio-title" align="center"><b>RESEARCH</b></h2>
                   </div><p class="justified">
                     <span class="text-aria">We divided the project by the tasks and allotted a set number of weeks to conduct the research and design tasks.
                       To come up with the redesign, we had to go in depth to understand the painpoints of the users and conduct <b>Evaluative research.</b> Methods used in this process: </span></p>
-                    <div class="row bottompadding">
+                    <div class="row bottompadding uppermargin">
                     <div class="col-md-2">
                       <img src="assets/img/Personal/interviews.png" class="img-fluid" alt="">
                     </div>
