--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -81,65 +81,55 @@
         <div class="section-title">
           <h2>Overview</h2>
           <p class="justified text-aria">
-		  My team at the Shared Services Center - <i>abbv:SSC </i> (A team that is involved in the finances and business aspects) of the university wanted to restructure the website to increase the number of users and improve the overall usability. Hence the user research project. </p>
+		  My team at the Shared Services Center - <i>abbv: SSC </i> <b> (A team that is involved in the finances and business aspects) </b> wanted to restructure the website to increase the number of users and improve the overall usability. The Shared Services Center website suffered from decreased audience because of usability issues like difficulties in content discovery, search relavance, and content structure related issues. Through user research, the aim was to change the existing structure of the website to improve the number of people visiting the website and hence, improve some of the parameters like the amount of time spent by the user on the website, time on each task, efficiency of information retrieval, etc,. In addition, another goal of ours is to provide good content even if the website relatively smaller as compared to other websites.  </p>
         </div>
-		
+
 		 <div class="row">
           <div class="col-lg-4">
-            <!--<img src="assets/img/Personal/.png" class="img-fluid" alt=""> -->
+            <img src="assets/img/Personal/UMBC-SSC-NEW.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p class="justified"><ul>
               <li class="text-aria"><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
               <li class="text-aria"><strong>User Base</strong>: Internal Team members, students, and faculty requiring information related to the shared services center. </li>
-              <li class="text-aria"><strong>Project Timeline</strong>: September 2020 - Present </li>
-              <li class="text-aria"><strong>Team Members</strong>: Finance Specialists, Business Associates </a></li>
-			  <li class="text-aria"><strong>My Role</strong>: User Researcher and Web developer</a></li>
-            </ul>
-			
-			</p>
-			<h3> About the Project</h3>
-            <p class="justified text-aria">
-                The Shared Services Center website suffered from decreased audience because of usability and content structure related issues. Through user research, our aim to change the existing structure of the website to improve the number of people visiting the website and hence, improve some of the parameters like the amount of time spent by the user on the website, time on each task, efficiency of information retrieval, etc,. In addition, another goal of ours is to provide good content, in an attempt to reduce the current bounce rates.
-            </p>
+              <li class="text-aria"><strong>Project Timeline</strong>: September 2020 - May 2020 </li>
+              <li class="text-aria"><strong>Team Members</strong>: Finance Specialists, Business Associates, Internal HR. </a></li>
+            <li class="text-aria"><strong>Research Methods Used</strong>: Observations, Heuristics, Task analysis, Statistical Analysis (NPS), Time on task.</a></li>
+
+          </ul>
+          </p>
+            <h3>My Role</h3>
+      		  <p class="justified text-aria"> User researcher and web developer responsible for carrying out the research and implementing the findings from the data through front-end web technologies to yield positive results.</p>
+
+            <h3 class="header-aria"><b>Impact</b></h2>
+      		  <p class="justified">
+      			<span class = "text-aria"> Through observations and incorporating quantitative data, the team managed to improve the <b> NPS from 30 - 50</b>. Increase the number of users over a period of 6 months to an all time high of <b>147 users </b> on a single day. In addition to that, the page views have been consistent and the <b> bounce rates currently stand at a low of 27%. </b>  Due to the changes implemeted post user research, the numbers show that the average number of page views was higher than what was before the redesign, with an <b>all time high of 184 page views </b>after the redesign. </span>
+              </div>
 		</div>
-    <!-- ======= Portfolio Details ======= -->
-        <div class="container content">
-		</br>
-		  <h3>My Role</h3>
-		  <p class="justified text-aria"> User researcher and web developer responsible for carrying out the research and implementing the findings from the data through front-end web technologies to yield positive results.  </p>
-		  
-		  <h3 class="header-aria"><b>Impact</b></h2>
-		  <p class="justified">
-			<span class = "text-aria"> Through observations and incorporating quantitative data, the team managed to improve the <b> NPS from 30 - 50 </b>. Increase the number of users over a period of 6 months to an all time high of <b>147 users </b> on a single day. In addition to that, the page views have been consistent and the <b> bounce rates currently stand at a low of 27%. </b>  Due to the changes implemeted post user research, the numbers show that the average number of page views was higher than what was before the redesign, with an <b>all time high of 184 page views </b>after the redesign. </span>
-        </div>  
-	  </div>
     </section>
-	
-	
-	
+
+
+
 	 <div class="section-title">
       <div class="container" data-aos="fade-up">
 	<h2 class="portfolio-title uppermargin">The project</h2>
-		  
+
 		  <p class="justified">
             <span class = "text-aria"> The team at the Shared Services Center  is looking to restructure the website to help guide users better, and help provide the required information with ease.</span> </p>
-			<p class="justified">
-            <span class = "text-aria"> Our client, the College of Engineering and Information technology (COEIT) highlighted some problems in their research website. The issues stem from the decreased usability and decreased user reach in the website. Our team decided to employ user research and help improve the usability of the website focussing on the base requirements of increased usability and improved traffic on the website.</span> </p> 
-			
+
           </div>
           </div>
 		</div>
     </section>
-	
-	
+
+
 	<section>
 	<div class="container">
 	<h2 style="color:blue"><i>More coming soon... </i> </h2>
 	</div>
 	</section>
   </main><!-- End #main -->
-  
+
    <footer id="footer">
     <div class="container">
       <h3>Anirudh Nagraj</h3>
